Library override - fails when armature and mesh are in separate collections #66629

Closed
opened 2019-07-09 23:28:18 +02:00 by Andrew Charlton · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-09 12:03, hash: db45aaafab

Short description of error
When armature and mesh are in separate collections, a library override makes the objects individually selectable, but not changeable, e.g. the armature cannot switch into pose mode.

Exact steps for others to reproduce the error
overridetestA.blend

overridetestB.blend

  • overridetestB.blend contains collections linked from overridetestA.blend
  • Open overridetestB.blend with --enable-library-override switch
  • Apply a library override to the OverrideThis collection, note that the armature cannot switch into pose mode
  • Do the same for the ThisWorks collection, override works as expected
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-09 12:03, hash: `db45aaafab` **Short description of error** When armature and mesh are in separate collections, a library override makes the objects individually selectable, but not changeable, e.g. the armature cannot switch into pose mode. **Exact steps for others to reproduce the error** [overridetestA.blend](https://archive.blender.org/developer/F7579972/overridetestA.blend) [overridetestB.blend](https://archive.blender.org/developer/F7579973/overridetestB.blend) - overridetestB.blend contains collections linked from overridetestA.blend - Open overridetestB.blend with --enable-library-override switch - Apply a library override to the OverrideThis collection, note that the armature cannot switch into pose mode - Do the same for the ThisWorks collection, override works as expected

Added subscriber: @Scaredyfish

Added subscriber: @Scaredyfish

Added subscribers: @mont29, @dfelinto

Added subscribers: @mont29, @dfelinto
Bastien Montagne was assigned by Dalai Felinto 2019-07-10 01:11:09 +02:00

@mont29 weren't library overrides supposed to be disabled for now?

@mont29 weren't library overrides supposed to be disabled for now?

They're behind a command line switch. I wasn't sure if I ought to report it, but I figured the info might be useful.

They're behind a command line switch. I wasn't sure if I ought to report it, but I figured the info might be useful.

@dfelinto they are, hence they are not officially supported for 2.80, but bug reports about them are still much welcomed. ;)

@Scaredyfish thanks, will check on that asap.

@dfelinto they are, hence they are not officially supported for 2.80, but bug reports about them are still much welcomed. ;) @Scaredyfish thanks, will check on that asap.

This issue was referenced by ae7db53744

This issue was referenced by ae7db53744845897154c9d2b54390850d3615093

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66629
No description provided.